dev-three branch merge toward version 2.5.0
git-svn-id: http://svn.code.sf.net/p/hsqldb/svn/base/trunk@5968 7c7dc5f5-a22d-0410-a3af-b41755a11667